--- a/style.css
+++ b/style.css
@@ -6,3 +6,93 @@
     box-sizing: border-box;
     font-family: 'Work Sans', sans-serif;
 }
+        /* header styles */
+    header{
+        background-color:rgba(255, 144, 14, 0.10) ;
+        padding: 20px 240px;
+    }
+    nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    nav ul{
+        display: flex;
+    }
+    nav li{
+        list-style: none;
+        margin-right: 30px;
+        font-weight: 500;
+        font-size: 1em;
+    }
+    nav li a{
+        text-decoration:none;
+        color: #424242;
+    }
+    .nav-title{
+        font-size: 2.8rem;
+        font-weight: 800;
+        color: #131313;
+    }
+
+    /* <!-- banner section styles --> */
+
+    .banner{
+
+    }
+    .banner-details{
+        max-width: 800px;
+        text-align: center;
+        margin:30px auto;
+    }
+    .banner-headline{
+        font-size: 4rem;
+        font-weight: 700;
+        color: #131313;
+    }
+    .banner-description{
+        color: #727272;
+    }
+    .btn-primary{
+        padding: 15px 22px;
+        background-color:#FF900E ;
+        font-size:1.25rem ;
+        border-radius: 8px;
+        color: #FFF;
+        margin: 20px 0 0;
+        cursor: pointer;
+        border: 1px solid #FF900E;
+    }
+    .btn-primary:hover{
+        background-color: transparent;
+        color:#FF900E  ;
+        transition: .3s;
+        border: 1px solid #FF900E;
+    }
+    .banner img{
+        width: 100%;
+    }
+
+    /* responsive styles */
+    /* mobile devices */
+@media screen and (max-width:576px) {
+    /* header section  */
+    header, nav, nav ul{
+        padding: 20px;
+        flex-direction: column;
+        gap: 8px;
+    }
+    nav li a {
+        margin: 8px 0;
+    }
+}
+
+/* desktop devices */
+@media screen and (min-width:577px) and (max-width:960px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
