--- a/style.css
+++ b/style.css
@@ -73,26 +73,66 @@
         width: 100%;
     }
 
-    /* responsive styles */
-    /* mobile devices */
-@media screen and (max-width:576px) {
-    /* header section  */
-    header, nav, nav ul{
-        padding: 20px;
-        flex-direction: column;
-        gap: 8px;
+        /* responsive styles */
+        /* mobile devices */
+    @media screen and (max-width:576px) {
+        /* header section  */
+        header, nav, nav ul{
+            padding: 20px;
+            flex-direction: column;
+            gap: 8px;
+        }
+        nav li a {
+            margin: 8px 0;
+        }
     }
-    nav li a {
-        margin: 8px 0;
-    }
-}
 
-/* desktop devices */
-@media screen and (min-width:577px) and (max-width:960px) {
-    header{
-        padding: 20px;
+    /* desktop devices */
+    @media screen and (min-width:577px) and (max-width:960px) {
+        header{
+            padding: 20px;
+        }
+        nav{
+            flex-direction: column;
+        }
     }
-    nav{
-        flex-direction: column;
+
+            /* main styles */
+
+    main{
+        max-width: 1440px;
+        margin: 0 auto;
     }
-}
+
+    /* feature teams container */
+    .teams-container{
+        display: flex;
+        align-items: center;
+        margin: 50px 0;
+    }
+    .teams-image-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1.5rem;
+    }
+    .teams-content{
+        padding:0px 70px;
+    }
+    .teams-content-heading{
+        font-size: 3rem;
+    }
+    .first-descr{
+        color: #727272;
+        font-weight: 500;
+    }
+    .second-descr{
+        color: #131313;
+        font-weight: 700;
+    }
+    .third-descr{
+        color: #FF900E;
+        font-weight:700 ;
+    }
+    .teams-content-description{
+        
+    }
