--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@
 .text-light-gray{
     color: #727272;
 }
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 800;
+    color: #131313;
+}
         /* header styles */
     header{
         background-color:rgba(255, 144, 14, 0.10) ;
@@ -33,11 +38,7 @@
         text-decoration:none;
         color: #424242;
     }
-    .nav-title{
-        font-size: 2.8rem;
-        font-weight: 800;
-        color: #131313;
-    }
+ 
 
     /* <!-- banner section styles --> */
 
@@ -83,7 +84,7 @@
         margin: 0 auto;
     }
 
-    /* feature teams container */
+    /*  teams container */
     .teams-container{
         display: flex;
         align-items: center;
@@ -118,9 +119,25 @@
         font-size: 1rem;
     }
 
-    /* responsive media quary */
-
-
+    /* facts section */
+    .facts-card-container{
+        display: flex;
+        justify-content: space-around;
+    }
+    .facts-card-container .card{
+        border-radius: 8px;
+        border: 1px solid #FF900E;
+        text-align: center;
+        padding:30px;
+    }
+    .facts-card-container .card .card-stats{
+        font-size: 2.8rem;
+        color: #424242;
+    }
+.facts-card-container .card .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+}
 
 
 
