--- a/style.css
+++ b/style.css
@@ -120,27 +120,52 @@
     }
 
     /* facts section */
+    .facts{
+        text-align: center;
+    }
     .facts-card-container{
         display: flex;
         justify-content: space-around;
+        margin-top: 30px;
     }
     .facts-card-container .card{
         border-radius: 8px;
         border: 1px solid #FF900E;
         text-align: center;
-        padding:30px;
+        padding:40px;
     }
     .facts-card-container .card .card-stats{
         font-size: 2.8rem;
         color: #424242;
     }
-.facts-card-container .card .card-title{
-    font-weight: 600;
-    font-size: 1.25rem;
-}
-
-
-
+    .facts-card-container .card .card-title{
+        font-weight: 600;
+        font-size: 1.25rem;
+    }
+            /* sponsord section  */
+    .sponsors{
+        text-align: center;
+        margin-top: 50px;
+    }
+    .sponsors-img-container{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 50px;
+        gap: 20px;
+    }
+    .sponsors-img-container img{
+        width: 165px;
+        text-align: center;
+    }
+            /* footer section  */
+    footer{
+        background-color: rgba(255, 144, 14, 0.10);
+        padding: 30px 150px;
+    }
+    footer, small{
+      text-align: center;
+    }
 
 
 
@@ -150,7 +175,7 @@
         /* mobile devices */
         @media screen and (max-width:576px) {
             /* header section  */
-            header, nav, nav ul{
+            header, nav ul, .facts-card-container{
                 padding: 20px;
                 flex-direction: column;
                 gap: 8px;
@@ -158,16 +183,24 @@
             nav li a {
                 margin: 8px 0;
             }
+            nav, .sponsors-img-container{
+                flex-direction: column;
+            }
             .teams-image-container{
                 grid-template-columns: 1fr;
             }
-            .teams-container{
+            .teams-container {
                 flex-direction: column;
+                gap: 20px;
                 
             }
             .teams-content{
                 padding: 20px 76px;
             }
+            .sponsors, .facts, footer{
+                padding: 10px;
+            }
+          
         }
     
         /* desktop devices */
@@ -175,18 +208,28 @@
             header{
                 padding: 20px;
             }
-            nav{
+            nav, .sponsors-img-container{
                 flex-direction: column;
             }
             .teams-image-container{
                 grid-template-columns: 1fr;
             }
-            .teams-container{
+            .teams-container, .facts-card-container{
                 flex-direction: column;
                 
             }
             .teams-image-container{
                 grid-template-columns: 1fr 1fr;
                 padding: 20px;
+            }
+            .facts-card-container{
+                gap: 20px;
+                padding: 20px 76px;
+            }
+            .sponsors, .facts, footer{
+                padding: 10px;
+            }
+            .card img{
+                width: 25%;
             }
         }
